// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-form-field-search-beta #render input attributes should render component as expected (1) 1`] = `"<gux-form-field-search-beta hydrated=\\"\\"> <input slot=\\"input\\" type=\\"search\\" value=\\"Sample search\\" id=\\"gux-form-field-input-i\\"> <label slot=\\"label\\" for=\\"gux-form-field-input-i\\">Label</label> </gux-form-field-search-beta>"`;

exports[`gux-form-field-search-beta #render input attributes should render component as expected (1) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div class="gux-input-container">
        <gux-icon hydrated="" icon-name="search"></gux-icon>
        <slot name="input"></slot>
        <gux-form-field-input-clear-button hydrated=""></gux-form-field-input-clear-button>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-search-beta #render input attributes should render component as expected (2) 1`] = `"<gux-form-field-search-beta hydrated=\\"\\"> <input slot=\\"input\\" type=\\"search\\" value=\\"Sample search\\" disabled=\\"\\" id=\\"gux-form-field-input-i\\"> <label slot=\\"label\\" for=\\"gux-form-field-input-i\\">Label</label> </gux-form-field-search-beta>"`;

exports[`gux-form-field-search-beta #render input attributes should render component as expected (2) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div class="gux-disabled gux-input-container">
        <gux-icon hydrated="" icon-name="search"></gux-icon>
        <slot name="input"></slot>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-search-beta #render input attributes should render component as expected (3) 1`] = `"<gux-form-field-search-beta hydrated=\\"\\"> <input slot=\\"input\\" type=\\"search\\" value=\\"Sample search\\" required=\\"\\" id=\\"gux-form-field-input-i\\"> <label slot=\\"label\\" for=\\"gux-form-field-input-i\\">Label</label> </gux-form-field-search-beta>"`;

exports[`gux-form-field-search-beta #render input attributes should render component as expected (3) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label gux-required">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div class="gux-input-container">
        <gux-icon hydrated="" icon-name="search"></gux-icon>
        <slot name="input"></slot>
        <gux-form-field-input-clear-button hydrated=""></gux-form-field-input-clear-button>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-search-beta #render label-position should render component as expected (1) 1`] = `"<gux-form-field-search-beta hydrated=\\"\\"> <input slot=\\"input\\" type=\\"search\\" value=\\"Sample search\\" id=\\"gux-form-field-input-i\\"> <label slot=\\"label\\" for=\\"gux-form-field-input-i\\">Label</label> </gux-form-field-search-beta>"`;

exports[`gux-form-field-search-beta #render label-position should render component as expected (1) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div class="gux-input-container">
        <gux-icon hydrated="" icon-name="search"></gux-icon>
        <slot name="input"></slot>
        <gux-form-field-input-clear-button hydrated=""></gux-form-field-input-clear-button>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-search-beta #render label-position should render component as expected (2) 1`] = `"<gux-form-field-search-beta label-position=\\"above\\" hydrated=\\"\\"> <input slot=\\"input\\" type=\\"search\\" value=\\"Sample search\\" id=\\"gux-form-field-input-i\\"> <label slot=\\"label\\" for=\\"gux-form-field-input-i\\">Label</label> </gux-form-field-search-beta>"`;

exports[`gux-form-field-search-beta #render label-position should render component as expected (2) 2`] = `
<div class="gux-above gux-form-field-container">
  <div class="gux-above gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div class="gux-input-container">
        <gux-icon hydrated="" icon-name="search"></gux-icon>
        <slot name="input"></slot>
        <gux-form-field-input-clear-button hydrated=""></gux-form-field-input-clear-button>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-search-beta #render label-position should render component as expected (3) 1`] = `"<gux-form-field-search-beta label-position=\\"beside\\" hydrated=\\"\\"> <input slot=\\"input\\" type=\\"search\\" value=\\"Sample search\\" id=\\"gux-form-field-input-i\\"> <label slot=\\"label\\" for=\\"gux-form-field-input-i\\">Label</label> </gux-form-field-search-beta>"`;

exports[`gux-form-field-search-beta #render label-position should render component as expected (3) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div class="gux-input-container">
        <gux-icon hydrated="" icon-name="search"></gux-icon>
        <slot name="input"></slot>
        <gux-form-field-input-clear-button hydrated=""></gux-form-field-input-clear-button>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-search-beta #render label-position should render component as expected (4) 1`] = `"<gux-form-field-search-beta label-position=\\"screenreader\\" hydrated=\\"\\"> <input slot=\\"input\\" type=\\"search\\" value=\\"Sample search\\" id=\\"gux-form-field-input-i\\"> <label slot=\\"label\\" for=\\"gux-form-field-input-i\\">Label</label> </gux-form-field-search-beta>"`;

exports[`gux-form-field-search-beta #render label-position should render component as expected (4) 2`] = `
<div class="gux-form-field-container gux-screenreader">
  <div class="gux-form-field-label gux-screenreader">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div class="gux-input-container">
        <gux-icon hydrated="" icon-name="search"></gux-icon>
        <slot name="input"></slot>
        <gux-form-field-input-clear-button hydrated=""></gux-form-field-input-clear-button>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
  </div>
</div>
`;
